--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -290,5 +290,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="categories">Categorías</string>
     <string name="only_favs">Sólo favoritas</string>
+    <string name="apply_filters">Aplicar filtros</string>
 
 </resources>
