--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY currency_name "etic"><!ENTITY currency_name_plural "etics"><!ENTITY currency_name_abrev "ETI">]>
+<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY currency_name "etic"><!ENTITY currency_name_plural "etics"><!ENTITY currency_name_abrev "etics">]>
 
 <resources>
     <string name="app_name">Mercado Social</string>
@@ -17,6 +17,7 @@
     <string name="recipient">Destinataria</string>
     <string name="calculate_bonus">Calcular bonificación</string>
     <string name="send_payment">Enviar pago</string>
+    <string name="mes_send_payment">MES - Enviar pago</string>
     <string name="send_payment_next">Enviar pago ></string>
     <string name="news">Noticias</string>
     <string name="open">Abrir</string>
@@ -252,7 +253,7 @@
     <string name="payment_info_format">
         <![CDATA[
         Importe total: <font color="#af64ac"><b>%s</b></font><br>
-        Importe en boniatos: <font color="#af64ac"><b>%s</b></font><br>
+        Importe en etics: <font color="#af64ac"><b>%s</b></font><br>
         Bonificación a enviar: <font color="#af64ac"><b>%s</b></font>
         ]]>
     </string>
@@ -260,7 +261,7 @@
     <string name="sent_payment_info_format">
         <![CDATA[
         Importe total: <font color="#af64ac"><b>%s</b></font><br>
-        Importe en boniatos: <font color="#af64ac"><b>%s</b></font><br>
+        Importe en etics: <font color="#af64ac"><b>%s</b></font><br>
         Bonificación a recibir: <font color="#af64ac"><b>%s</b></font>
         ]]>
     </string>
@@ -268,8 +269,8 @@
     <string name="concept_two_dots">Concepto:</string>
     <string name="sent_payments_pending_check">Pagos enviados pendientes de revisión</string>
     <string name="sent_payments">Pagos enviados</string>
-    <string name="info_max_accept_percent">Máximo pago en boniatos: es el máximo % de pago en boniatos que acepta tu entidad. Recomendamos aceptar el 100%, ya que si se acumulan muchos boniatos, las entidades pueden cambiar a euro en todo momento.</string>
-    <string name="info_bonus_percent">% bonificación general: el % de bonificación en boniatos que realiza tu entidad a un usuario de moneda social.\nPor ejemplo, si una persona realiza una compra equivalente a 20 euros y tienes un % de bonificación de 5%, la bonificación a ingresar será de 1 boniato.</string>
+    <string name="info_max_accept_percent">Máximo pago en &currency_name_plural;: es el máximo % de pago en &currency_name_plural; que acepta tu entidad. Recomendamos aceptar el 100%, ya que si se acumulan muchos &currency_name_plural;, las entidades pueden cambiar a euro en todo momento.</string>
+    <string name="info_bonus_percent">% bonificación general: el % de bonificación en &currency_name_plural; que realiza tu entidad a un usuario de moneda social.\nPor ejemplo, si una persona realiza una compra equivalente a 20 euros y tienes un % de bonificación de 5%, la bonificación a ingresar será de 1 &currency_name;.</string>
     <string name="info_bonus_percent_entities">% de bonificación a entidades: como es probable que las entidades hagan intercambios mayores, puedes elegir un % especial para las mismas en función de tus necesidades.</string>
     <string name="channel_name">Pagos y transacciones</string>
     <string name="channel_description">Notificaciones cuando se hacen pagos a entidades y cuando se ingresan &currency_name_plural;
@@ -311,5 +312,9 @@
     <string name="invite">Invitar</string>
     <string name="invitation_sent">Invitación enviada. ¡Gracias!</string>
     <string name="sending">Enviando</string>
+    <string name="no_transactions_graph_message">No hay movimientos en etics.\nEn esta gráfica se irá mostrando la variación de saldo en etics según vayas haciendo uso de tus bonificaciones.</string>
+    <string name="transactions_empty_message">Todavía no tienes movimientos en etics para mostrar.</string>
+    <string name="mes_format">Mercado: %s</string>
+    <string name="guest_account_info_format">Cuenta invitada.\nVálida hasta: %s</string>
 
 </resources>
