--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -346,5 +346,6 @@
     <string name="incorrect_password">Contraseña incorrecta</string>
     <string name="published">Publicada: %s</string>
     <string name="valid_until">Válida hasta: %s</string>
+    <string name="app_not_found">No se encuentra aplicación para abrir este enlace.</string>
 
 </resources>
