--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -359,5 +359,6 @@
     <string name="member_check_result">La socia número %s está %s</string>
     <string name="register_to_use_member_card_text">Para ver tu carné de socia tienes que entrar con tu cuenta. Si todavía no lo eres, te puedes registrar pulsando el botón inferior.</string>
     <string name="members_benefits">Ventajas para soci@s</string>
+    <string name="change_image">Cambiar imagen</string>
 
 </resources>
