--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -366,7 +366,7 @@
     <string name="benefit_in_person">Descuento en persona</string>
     <string name="benefit_online">Descuento online</string>
     <string name="benefits_not_for_intercoop">Descuento no disponible para socias de intercooperación</string>
-    <string name="benefit_request_email_subject">Solicitud de descuento Mercado Social de Madrid</string>
+    <string name="benefit_request_email_subject">Solicitud de descuento Mercado Social de Madrid. Número de socia: %s</string>
     <string name="benefit_code_x">Código de descuento: %s</string>
     <string name="member_number">Número de socia: %s</string>
     <string name="intercoop_member">Intercooperación</string>
