- Updated MES data - Shuffle entities list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,7 +204,7 @@
     <string name="facebook">Facebook</string>
     <string name="twitter">Twitter</string>
     <string name="youtube">Youtube</string>
-    <string name="vimeo">Vimeo</string>
+    <string name="linkedin">Linkedin</string>
     <string name="instagram">Instagram</string>
 
     <string name="email_contact_subject">Contacto desde la app Android</string>
